# wpctl

./: Cargo.toml  LICENSE  README.md
docs/: CONFIG.md  README.md  REPOSITORY.md
src/: app.rs  backend.rs  main.rs  ui.rs  utils.rs
src/backend/: config.rs  repository.rs  wallpaper.rs
src/old/: app.rs  main.rs  ui.rs
src/ui/: setup.rs
src/ui/pages/: main.rs
