[package]
name = "wctl"
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4.5.38", features = ["unstable-dynamic"] }
#cursive = "0.21.1"
dirs = "5.0.1"
git2 = "0.19.0"
ratatui = "0.29.0"
ratatui-image = { version = "3.0.0", features = ["crossterm"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
