[package]
name = "wctl"
description = "Wallpaper package manager written in rust"
repository = "https://github.com/SpamixOfficial/wctl"
version = "1.0.0"
edition = "2021"
license = "BSD-4-Clause"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4.5.38", features = ["unstable-dynamic"] }
#cursive = "0.21.1"
dirs = "5.0.1"
file-matcher = "0.7.0"
git2 = "0.19.0"
image = "0.25.5"
ratatui = "0.29.0"
ratatui-image = { version = "3.0.0", features = ["crossterm"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
url = "2.5.4"
wallpaper = "3.2.0"
